--- a/public/pages/designer.html
+++ b/public/pages/designer.html
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row" class="designer-container">
     <iframe  width="100%" ng-src="{{redFrame}}" marginheight="0" frameborder="0" height="100px" id="designerFrame"></iframe>
 </div>
 <script>
-$('#designerFrame').attr('height',$("body").height()-50)
+$('#designerFrame').attr('height',$("body").height()-50);
 window.onresize = function(event) {
   $('#designerFrame').attr('height',$("body").height()-50);
 }
