--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,173 +1,216 @@
-<div class='col-xs-12'>
+<!-- Made an Edit -->
 
-    <div class='page-header page-header-with-buttons'>
-        <h1 class='pull-left'>
-            <i class='icon-bar-chart'></i>
-            <span>Analyzer</span>
-        </h1>
+<div class='page-header page-header-with-buttons'>
+    <h1 class='pull-left'>
+        <i class='icon-bar-chart'></i>
+        <span>Analyzer</span>
+    </h1>
+</div>
+
+<div class="container-fluid">
+<accordion>
+<accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4 dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Top Devices Sending</h3>
+                </div>
+                <div class="panel panel-default">
+                    <a href="">
+                        <div class="panel-body">
+                            <div ng-switch="!!topResults ? 1 : 0">
+                                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                <div ng-switch-default>
+                                    <div nvd3-pie-chart data="topResults.fromUuid" height="300"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Top Devices Receiving</h3>
+                </div>
+                <div class="panel panel-default">
+                    <a href="">
+                        <div class="panel-body">
+                            <div ng-switch="!!topResults ? 1 : 0">
+                                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                <div ng-switch-default>
+                                    <div nvd3-pie-chart data="topResults.toUuid" height="300"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-
+    <!-- Endof Container Fluid-->
+</accordion-group>
+<accordion-group heading="Time Ranges">
     <div class="row">
-        <accordion>
-            <accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-4 dashboard-panel">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Top Devices Sending</h3>
-                            </div>
-                            <div class="panel panel-default">
-                                <a href="">
-                                    <div class="panel-body">
-                                        <div ng-switch="!!topResults ? 1 : 0">
-                                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i>
-                                            </h1></div>
-                                            <div ng-switch-default>
-                                                <div nvd3-pie-chart data="topResults.fromUuid"
-                                                     height="300"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 dashboard-panel">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Top Devices Receiving</h3>
-                            </div>
-                            <div class="panel panel-default">
-                                <a href="">
-                                    <div class="panel-body">
-                                        <div ng-switch="!!topResults ? 1 : 0">
-                                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i>
-                                            </h1></div>
-                                            <div ng-switch-default>
-                                                <div nvd3-pie-chart data="topResults.toUuid"
-                                                     height="300"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+        <div class="col-md-10">
+            <h2>Count of EventCodes over time</h2>
+        </div>
+    </div>
+</accordion-group>
+<accordion-group heading="Freeform Search">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="input-group">
+                <form class="form-inline col-md-12">
+                    <div class="form-group col-md-8">
+                        <input type="text" class="form-control" ng-model="forms.FF_searchText"
+                               placeholder="Search" autofocus/>
                     </div>
-                </div>
-                <!-- Endof Container Fluid-->
-            </accordion-group>
-            <accordion-group heading="Time Ranges">
-                <div class="row">
-                    <div class="col-md-10">
-                        <h2>Count of EventCodes over time</h2>
+                    <div class="form-group col-md-2">
+                        <select class="form-control" ng-model="forms.FF_eventCode">
+                            <option value="">All Event Codes</option>
+                            <option ng-repeat="event in events" value="{{event.code}}">{{event.name}}
+                            </option>
+                        </select>
+
                     </div>
-                </div>
-            </accordion-group>
-            <accordion-group heading="Freeform Search">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="input-group">
-                            <form class="form-inline col-md-12">
-                                <div class="form-group col-md-8">
-                                    <input type="text" class="form-control" ng-model="searchText"
-                                           placeholder="Search" autofocus>
-                                </div>
-                                <div class="form-group col-md-2">
-                                    <select class="form-control" ng-model="eventCode">
-                                        <option value="">All Event Codes</option>
-                                        <option ng-repeat="event in events" value="{{event.code}}">
-                                            {{event.name}}
-                                        </option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-2">
+                    <div class="form-group col-md-2">
                       <span class="input-group-btn">
                           <button class="btn btn-default" type="button" ng-click="search(1)">
                               <span class="glyphicon glyphicon-search"> Find</span>
                           </button>
                       </span>
-                                </div>
-                            </form>
-                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel panel-info" ng-show="results">
+        <!-- Default panel contents -->
+        <div class="panel-heading">Results
+            <p class="pull-right"> hits: {{ results.hits.total }}</p>
+        </div>
+        <input type="checkbox" ng-model="checked"> pretty print?
+        <div class="panel-body">
+            <table class="table table-striped table-hover">
+                <tr ng-repeat="result in results.hits.hits" ng-class="rowClass(result)">
+                    <td ng-hide="checked">{{ result }}</td>
+                    <td ng-show="checked">
+                        <pre>{{ result | json }}</pre>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <!--<pager total-items="totalItems" page="currentPage" ng-show="results"></pager>-->
+</accordion-group>
+<accordion-group heading="Explore">
+    <div class="container-fluid">
+        <div class="row">
+            <form novalidate>
+                <div class="col-md-4 dashboard-panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Device Selection</h3>
+                        <span><kbd>ctrl+click</kbd> for multiple</span>
+                    </div>
+                    <div class="panel ">
+                        <a href="">
+                            <div class="panel-body">
+                                <select class="form-control" size=10 style="height:100%" multiple
+                                        ng-model="forms.EX_graphDevices">
+                                    <option value="*" selected="selected">All Event Codes</option>
+                                    <option ng-repeat="cb_device in devices" value="{{cb_device.uuid}}">
+                                        {{cb_device.name}}
+                                    </option>
+                                </select>
+                            </div>
+                        </a>
                     </div>
                 </div>
-
-                <div class="panel panel-info" ng-show="results">
-                    <!-- Default panel contents -->
-                    <div class="panel-heading">Results
-                        <p class="pull-right"> hits: {{ results.hits.total }}</p>
-                    </div>
-                    <input type="checkbox" ng-model="checked"> pretty print?
-                    <div class="panel-body">
-                        <table class="table table-striped table-hover">
-                            <tr ng-repeat="result in results.hits.hits" ng-class="rowClass(result)">
-                                <td ng-hide="checked">{{ result }}</td>
-                                <td ng-show="checked">
-                                    <pre>{{ result | json }}</pre>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
-                <!--<pager total-items="totalItems" page="currentPage" ng-show="results"></pager>-->
-            </accordion-group>
-            <accordion-group heading="Explore">
-                <div class="container-fluid">
+                <div class="col-md-8 dashboard-panel">
                     <div class="row">
                         <div class="col-md-4 dashboard-panel">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Device Selection</h3>
+                                <h3 class="panel-title">Options</h3>
                             </div>
-                            <div class="panel panel-default">
-                                <a href="">
-                                    <div class="panel-body">
-                                        <ul class="list-group">
-                                            <li ng-repeat="cb_device in devices" class="list-group-item">
-                                                <label>
-                                                    <input type="checkbox" value="{{cb_device.uuid}}"/>
-                                                    {{cb_device.name}}
-                                                </label>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </a>
+                            <div class="panel">
+                                <div class="form-group">
+                                    <label for="eventCode"> Event Code: </label> <select multiple size=5
+                                                                                         class="form-control"
+                                                                                         ng-model="forms.EX_eventCode">
+                                    <option value="">All Event Codes</option>
+                                    <option ng-repeat="event in events" value="{{event.code}}">
+                                        {{event.name}}
+                                    </option>
+                                </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="starting"> Starting: </label><select
+                                        class="form-control" ng-model="forms.EX_starting">
+                                    <option ng-repeat="df in ESdateFormats" value="{{df.value}}"
+                                    {{df.selected}} >{{df.text}}</option>
+                                </select>
+                                    <label for="ending"> Ending: </label> <select class="form-control"
+                                                                                  ng-model="forms.EX_ending">
+                                    <option ng-repeat="df in ESdateFormats" value="{{df.value}}"
+                                    {{df.selected}} >{{df.text}}</option>
+                                </select>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-8 dashboard-panel">
                             <div class="panel-heading">
-                                <h3 class="panel-title">The Graph</h3>
+                                <h3 class="panel-title">Summary Results</h3>
                             </div>
-                            <div class="panel panel-default">
-                                Hello? Is it me you're looking for?
+                            <div class="panel">
+                                <table class="table table-hover">
+                                    <tr>
+                                        <td>Different Event Codes:</td>
+                                        <td>{{leg.dcEC}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Total Events Returned:</td>
+                                        <td>{{leg.total}}</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
-
                     </div>
-                </div>
-            </accordion-group>
-            <accordion-group heading="Device Details - possibly move to the connectors page">
-                <div class="container-fluid">
                     <div class="row">
-                        <h2>Device Details</h2>
-
-                        <div class="input-group">
-                            <form class="form-inline col-md-12">
-                                <div class="form-group col-md-12">
-                                    <div class="form-group">
-                                        <select ng-model="device"
-                                                ng-options="device.name for device in devices"
-                                                class="form-control"></select>
-                                    </div>
-                                </div>
-                            </form>
+                        <div class="col-lg-12 dashboard-panel">
+                            <div class="form-group col-md-2 text-center">
+		                      <span class="input-group-btn">
+                		          <button class="btn btn-default" type="button" ng-click="loadExploreGraph()">
+                                      <span class="glyphicon glyphicon-search"> Find</span>
+                                  </button>
+                		      </span>
+                            </div>
                         </div>
                     </div>
+            </form>
+        </div>
+        <!-- end Choices Div Row -->
+        <div class="row">
+            <div class="col-md-8 dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">The Graph</h3>
                 </div>
+                <div class="panel panel-default">
+                    <carousel>
+                        <slide ng-repeat="chart in eGCharts" active="chart.active">
+                            <div class="carousel-caption">
+                                <h4>Chart {{index}}</h4>
 
-                <message-grapher device="device.uuid"></message-grapher>
-                <textarea style="width:100%">{{device}}</textarea>
-
-            </accordion-group>
-        </accordion>
-
+                                <p>{{chart.text}}</p>
+                            </div>
+                        </slide>
+                    </carousel>
+                </div>
+            </div>
+        </div>
     </div>
+</accordion-group>
+</accordion>
 </div>
