Updating Analyzer page - merging previous changes and fixing code so that it works with latest code changes.

--- a/public/pages/designer.html
+++ b/public/pages/designer.html
@@ -1,5 +1,5 @@
 <div class="row" class="designer-container">
-    <iframe  width="100%" ng-src="{{redFrame}}" marginheight="0" frameborder="0" height="100px" id="designerFrame"></iframe>
+    <iframe style="margin-top:56px;" width="100%" ng-src="{{redFrame}}" marginheight="0" frameborder="0" height="100px" id="designerFrame"></iframe>
 </div>
 <script>
 $('#designerFrame').attr('height',$("body").height()-106);
