--- a/public/pages/docs.html
+++ b/public/pages/docs.html
@@ -1,16 +1,8 @@
-<section id='content'>
-  <div class='container'>
-    <div class='row' id='content-wrapper'>
-      <div class='col-xs-12'>
-        
-        <div class='page-header page-header-with-buttons'>
-          <h1 class='pull-left'>
-            <i class='icon-cogs'></i>
-            <span>Docs</span>              
-          </h1>        
-        </div>
-      
-      </div>
+<div class='col-xs-12'>
+    <div class='page-header page-header-with-buttons'>
+        <h1 class='pull-left'>
+            <i class="fa fa-cogs"></i>
+            <span>Docs</span>
+        </h1>
     </div>
-  </div>
-</section>
+</div>
