Replacing skynet client with skynet.bundle. Also updated the angular skynet service to use the new client

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
     <link href="lib/nvd3/nv.d3.css" rel="stylesheet"/>
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
-    <script src="assets/javascripts/skynet.js"></script>
+    <script src="lib/socket.io-client/socket.io.js"></script>
+    <script src="assets/javascripts/skynet.bundle.js"></script>
+    <!--<script src="assets/javascripts/skynet.js"></script>-->
 
     <style type="text/css">
         .reveal-animation.ng-enter {
