--- a/public/pages/connector/channels/editor.html
+++ b/public/pages/connector/channels/editor.html
@@ -1,8 +1,4 @@
 
-      <div ng-show="channel.logo">
-        <img ng-src="{{channel.logo}}" ng-show="channel.logo" width="100" height="100"/>
-      </div>
-
         <h3>{{channel.name}}</h3>
 
         <fieldset ng-show="isEdit || isNew">
@@ -114,7 +110,7 @@
         <div style="padding:5px;">
           <button class="btn btn-inverse" ng-show="!isEdit && !isNew" ng-click="setEditMode()">Edit</button>
           <button class="btn btn-success" ng-show="isEdit || isNew" ng-click="save()">Save</button>
-          <button class="btn" ng-show="isEdit && !isNew" ng-click="cancelEdit()">Cancel</button>
+          <button class="btn btn-danger" ng-show="isEdit || isNew" ng-click="cancelEdit()">Cancel</button>
           <button class="btn btn-primary" ng-click="addResource()" ng-hide="isNew || isEdit">Add Resource</button>
         </div>
 
