--- a/public/pages/connector/channels/editor.html
+++ b/public/pages/connector/channels/editor.html
@@ -1,5 +1,8 @@
 
-        <h3>{{channel.name}}</h3>
+        <h3>{{channel.name}}
+        &nbsp;&nbsp;
+        <a class="btn btn-danger" ng-show="!isNew" ng-click="confirmDeleteApi()">Delete</a>
+        </h3>        
 
         <fieldset ng-show="isEdit || isNew">
 
@@ -221,6 +224,19 @@
     </div>
     <div class="modal-body">
       Are you sure you want to delete this API resource?
+    </div>
+
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+<script type="text/ng-template" id="confirmDeleteChannel.html">
+    <div class="modal-header">
+        <h3>Delete Custom Channel?</h3>
+    </div>
+    <div class="modal-body">
+      Are you sure you want to delete this channel?
     </div>
 
     <div class="modal-footer">
