--- a/public/pages/connector/devices/wizard/find-device.html
+++ b/public/pages/connector/devices/wizard/find-device.html
@@ -29,7 +29,7 @@
                     <label class="col-sm-2 control-label">Name</label>
 
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="model.name">
+                        <input type="text" class="form-control" ng-model="model.device.name">
                     </div>
                 </div>
                 <div class="form-group">
