switching to use channel id instead of name

--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -61,17 +61,18 @@
     </div>
     <div class="row col-xs-12">
       <br /><br />
-      <h4><strong>Base URI: {{channel.application.base}}</strong></h4>
+      <h4 ng-hide="channel.name=='ElasticLogs'"><strong>Base URI: {{channel.application.base}}</strong></h4>
+      <h4 ng-show="channel.name=='ElasticLogs'"><strong>Base URI: &lt;hidden&gt;</strong></h4>
       <br /><br />
     <div ng-hide="channel.application.resources.resource.length || channel.application.resources.length">No API resources found</div>
     <div class="table-responsive">
       <table class="table table-striped table-hover">
-        <tr ng-repeat="resource in channel.application.resources.resource">
+        <tr ng-repeat="resource in channel.application.resources.resource" ng-hide="resource.disabled">
           <td>{{resource.method.name}}</td>
           <td>{{resource.path}}</td>
           <td>{{resource.method.doc.$t}}</td>
         </tr>
-        <tr ng-repeat="resource in channel.application.resources">
+        <tr ng-repeat="resource in channel.application.resources" ng-hide="resource.disabled">
           <td>
             <a class="btn disabled btn-large btn-primary" ng-show="resource.httpMethod == 'GET'"> GET</a>
             <a class="btn disabled btn-large btn-success" ng-show="resource.httpMethod == 'POST'"> POST</a>
