able to create custom channel w/o name

--- a/public/pages/connector/advanced/channels.html
+++ b/public/pages/connector/advanced/channels.html
@@ -1,4 +1,4 @@
-<a href ui-sref=".editor({name: 'new'})" class="btn btn-success pull-right">Add</a>
+<a href ui-sref=".editor({id: 'new'})" class="btn btn-success pull-right">Add</a>
 
 <div class="divScroll">
  	<div class="scrollWrapper">
