Fixed styles for messaging, added environment variable for SKYNET_OVERRIDE_TOKEN and updated messaging.js so the schema gets updated with new subdevice properties.

--- a/public/pages/connector/advanced/messaging.html
+++ b/public/pages/connector/advanced/messaging.html
@@ -52,7 +52,7 @@
                 <h4><i class="fa fa-send-o"></i> Message Sent</h4>
             </div>
             <div class="panel-body">
-                <pre ng-hide="!model.msg">{{model.messageOutput | json }}</pre>
+                <pre ng-hide="!model.messageOutput">{{model.messageOutput | json }}</pre>
             </div>
         </div>
 
