trying to get graphs to work better

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" type="text/css"/>
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" type="text/css"/>
     <link href="lib/nvd3/nv.d3.css" rel="stylesheet"/>
+    <link href="lib/ng-table/ng-table.css" rel="stylesheet"/>
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
     <script src="lib/socket.io-client/socket.io.js"></script>
@@ -78,6 +79,7 @@
 <script src="lib/lodash/dist/lodash.js"></script>
 <script src="lib/d3/d3.js"></script>
 <script src="lib/nvd3/nv.d3.js"></script>
+<!--<script src="lib/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>-->
 <!-- endbuild -->
 
 <!-- build:js scripts/modules.js -->
@@ -111,6 +113,8 @@
 <script src="angular/services/auth.js"></script>
 <script src="angular/directives/nvd3-line-chart.js"></script>
 <script src="angular/directives/nvd3-pie-chart.js"></script>
+<script src="angular/directives/nvd3-line-with-focus-chart.js"></script>
+<script src="lib/ng-table/ng-table.js"></script>
 <script src="angular/directives/popover.js"></script>
 <script src="angular/directives/toggle.js"></script>
 <script src="angular/directives/message-grapher/message-grapher.js"></script>
