Forgot password form generates reset token, sends email

--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,7 @@
 <script src="angular/controllers/designer.js"></script>
 <script src="angular/controllers/docs.js"></script>
 <script src="angular/controllers/faqs.js"></script>
+<script src="angular/controllers/forgot.js"></script>
 <script src="angular/controllers/octoblu.js"></script>
 <script src="angular/controllers/login.js"></script>
 <script src="angular/controllers/pricing.js"></script>
