--- a/public/pages/forgot.html
+++ b/public/pages/forgot.html
@@ -18,14 +18,14 @@
             <div class='row'>
               <div class='col-sm-4 col-sm-offset-4'>
                 <h1 class='text-center title'>Forgot password</h1>
-                <form action='index.html' method='get'>
+                <form action='/forgot' method='post'>
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
                       <input value="" placeholder="E-mail" class="form-control" name="email" type="text" />
                       <i class='icon-user text-muted'></i>
                     </div>
                   </div>
-                  <button class='btn btn-block'>Send me the instructions</button>
+                  <button type="submit" class='btn btn-block'>Send me the instructions</button>
                 </form>
                 <div class='text-center'>
                   <hr class='hr-normal'>
