Minor formatting changes on forgot and signup

--- a/public/pages/forgot.html
+++ b/public/pages/forgot.html
@@ -38,27 +38,22 @@
 
                 <h3 class="text-center text-success" ng-if="successMessage">{{successMessage}}</h3>
 
-                <div class="text-center">
-                  <hr class="hr-normal">
+                <hr class="hr-normal">
+                <div class="col-sm-offset-4 col-sm-8">
                   <a href ui-sref="login">
-                    <i class="icon-chevron-left"></i>
-                    I already know my password
+                    Login
+                  </a>
+                  /
+                  <a href="#signup">
+                    Sign up!
                   </a>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="login-container-footer">
-          <div class="container">
+            <br>
             <div class="row">
               <div class="col-sm-12">
                 <div class="text-center">
-                  <a href="#signup">
-                    <i class="icon-user"></i>
-                    New to Octoblu?
-                    <strong>Sign up</strong>
-                  </a>
                 </div>
               </div>
             </div>
