--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -41,7 +41,7 @@
                     <label for='agreement'>
                       <input id='agreement' name='agreement' type='checkbox' value='1'>
                       I accept
-                      <a class='text-contrast' href='#'>user agreements</a>
+                      <a href='#'>user agreements</a>
                     </label>
                   </div>
                   <button class='btn btn-block'>Sign up</button>
