--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -3,7 +3,7 @@
 <div class='page-header page-header-with-buttons'>
     <h1 class='pull-left'>
         <i class='icon-bar-chart'></i>
-        <span>Analyzer</span>
+        <span>Analyze</span>
     </h1>
 </div>
 
