--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -16,7 +16,7 @@
                 <li ui-sref-active="active"><a href ui-sref=".dashboard"><i class="fa fa-dashboard fa-lg"></i>&nbsp;Dashboard</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".connector.devices.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connectors</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
-                <li ui-sref-active="active"><a href ui-sref=".analyzer"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyzer</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
                 <li class="dropdown">
